start with babylon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
     <body>
       <div id="layout-wrapper"></div>
-      <script src="bundle.js">
-      </script>
+      <canvas id="renderCanvas"></canvas>
+      <script src="babylon.custom.js"></script>
+      <script src="bundle.js"></script>
     </body>
 </html>
