add more helpers refactor game into a scene ensure demo still works

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
       <div id="layout-wrapper"></div>
-      <script src="babylon.custom.js"></script>
+      <script src="./vendor/babylon.custom.js"></script>
       <script src="bundle.js"></script>
     </body>
 </html>
