plain js version for peter

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
     <head>
     </head>
     <body>
-      <div id="root-wrapper"></div>
-      <script src="bundle.js">
-      </script>
+
+      <hr />
+        <b>HEADER</b><br>
+        <a class='header-link' href='#root'> Root </a><br>
+        <a class='header-link' href='#page1'> Page 1 </a><br>
+        <a class='header-link' href='#page2'> Page 2 </a><br>
+      <hr />
+
+      <div id="current-page"></div>
+
+      <hr /><b>FOOTER</b><hr />
+
+      <script src="bundle.js"></script>
+
     </body>
 </html>
