--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
     </head>
     <body>
 
-      <hr />
-        <b>HEADER</b><br>
-        <a class='header-link' href='#root'> Root </a><br>
-        <a class='header-link' href='#page1'> Page 1 </a><br>
-        <a class='header-link' href='#page2'> Page 2 </a><br>
-      <hr />
+      <hr /><div id='header'></div><hr />
 
       <div id="current-page"></div>
-
-      <hr /><b>FOOTER</b><hr />
+      
+      <hr /><div id='footer'> </div><hr />
 
       <script src="bundle.js"></script>
 
